@@ -1,5 +1,6 @@
 Release 1.0.6 (future)
 
+- Issue 210: Fix fetch() with offset > 1000.
 - Improve error message when calling Model() with positional argument(s).
 
 Release 1.0.5 (included in SDK 1.7.2)
